Adicionando botão de voltar e ajustando design

--- a/css/images.css
+++ b/css/images.css
@@ -76,3 +76,48 @@
   visibility: visible;
   opacity: 1;
 }
+
+.return-button{
+  width: 2.75em;
+  cursor: pointer;
+  display: block;
+  height: 2.75em;
+  font-size: 1.25em;
+  line-height: 2.75em;
+  text-decoration: none;
+  color: #FFF;
+  border: 3px solid #fca311;
+  border-radius: 50%;
+  letter-spacing: 2px;
+  text-align: center;
+  position: relative;
+  transition: all .2s;
+  overflow: hidden;
+  position: fixed;
+  top: 1em;
+  left: 1em;
+}
+
+.return-button span{
+  position: relative;
+  z-index: 2;
+}
+
+.return-button:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #fca311;
+  transition: all .35s;
+}
+
+.return-button:hover span{
+  color: #14213d
+}
+
+.return-button:hover:after{
+  width: 100%;
+}
